--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,11 @@
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
     {% include meta.html %}
-    {% if page.use_math %}
-    {% include mathjax_support.html %}
-    {% endif %}
+    {% if page.usemathjax %}
+    <script type="text/javascript" async
+     src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+      </script>
+    {% end if %}
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
