--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     {% if page.use_math %}
     {% include mathjax_support.html %}
     {% endif %}
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
