--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -25,7 +25,7 @@
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
     CommonHTML: {
-      scale: 0.6
+      scale: 0.6,
     },
     TeX: {
       equationNumbers: {
